2010-02-25  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* utils.sgml (kill): Add SIGIO, SIGCLD, and SIGPWR.

2010-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* utils.sgml (locale): Change description of -a and -av to match
	latest changes.

2010-02-23  Corinna Vinschen  <corinna@vinschen.de>

	* locale.cc (printlocale): Remove.
	(loc_t): New type to keep locale information for printing.
	(print_codeset): New function to print codeset as on Linux.
	(print_locale_with_codeset): New function to print single locale.
	Print verbose style as the Linux locale(1) tool.
	(print_locale): New function to print single locale plus its UTF-8
	variation, if available.
	(compare_locales): New helper function for bsearch and qsort on loc_t.
	(add_locale): New function to store locale in loc_t array.
	(add_locale_alias_locales): New function to store locales from
	locale.alias file in loc_t.
	(print_all_locales): Call add_locale instead of printlocale.
	Call add_locale_alias_locales, sort locales alphabetically and print
	them.

2010-02-22  Christopher Faylor  <me+cygwin@cgf.cx>

	* strace.cc (mnemonic_table): Add "special" mask option.
	(usage): Document it.
	* utils.sgml: Ditto.

2010-02-22  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (do_pathconv): Fix erroneously printing native NT path
	prefix introduced by previous patch.

2010-02-22  Corinna Vinschen  <corinna@vinschen.de>

	* locale.cc (lc_time_names): Add "date_fmt" entry.

2010-02-19  Christopher Faylor  <me+cygwin@cgf.cx>

	* strace.cc (mnemonic_table): Add pthread mask option.
	(usage): Document strace pthread mask option.
	* utils.sgml: Ditto.

2010-02-19  Corinna Vinschen  <corinna@vinschen.de>

	* locale.cc (print_lc_mstrings): New function to print
	semicolon-separated strings.
	(enum type_t): New type is_sepstrings_linf.
	(lc_time_names): Change type of era and alt_digits entry to
	is_sepstrings_linf.
	(print_lc): Add case for is_sepstrings_linf and call print_lc_mstrings
	in that case.
